# airflow-rag-spike

./: .env.example  .gitignore  README.md  pyproject.toml  test_similarity_search.py
dags/ingestion/: rag_ingestion_pipeline.py
include/streamlit/: __init__.py  app.py  rag_utils.py
include/tasks/: chunk.py  embed.py  extract.py  persist.py  vector_db.py
pg-vector/: README.md  docker-compose.yml  init.sql
